// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list-view/demo/basic.md correctly 1`] = `
<div
  class="am-list-view-scrollview"
  style="position:relative;overflow:auto;-webkit-overflow-scrolling:touch;height:0"
>
  <div
    class="am-list-view-scrollview-content am-list"
    style="position:absolute;min-width:100%"
  >
    <div
      class="am-list-header"
    >
      <span>
        header
      </span>
    </div>
    <div
      class="am-list-body my-body"
    >
      <span
        style="display:none"
      >
        you can custom body wrap element
      </span>
    </div>
    <div
      class="am-list-footer"
    >
      <div
        style="padding:30px;text-align:center"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list-view/demo/basic-body.md correctly 1`] = `
<div
  class="am-list am-list-view-scrollview"
>
  <div
    class="am-list-header"
  >
    <span>
      header
    </span>
  </div>
  <div
    class="am-list-body"
  />
  <div
    class="am-list-footer"
  >
    <div
      style="padding:30px;text-align:center"
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`renders ./components/list-view/demo/basic-sticky.md correctly 1`] = `
<div
  class="am-list sticky-list am-list-view-scrollview"
>
  <div
    class="am-list-header"
  >
    <span>
      header
    </span>
  </div>
  <div
    class="am-list-body"
  />
  <div
    class="am-list-footer"
  >
    <div
      style="padding:30px;text-align:center"
    >
      Loading...
    </div>
  </div>
</div>
`;

exports[`renders ./components/list-view/demo/idxed.md correctly 1`] = `
<div
  style="padding-top:44px;position:relative"
>
  <div
    style="position:absolute;top:0;left:0;right:0"
  >
    <form
      action="#"
      class="am-search"
    >
      <div
        class="am-search-input"
      >
        <div
          class="am-search-synthetic-ph"
        >
          <span
            class="am-search-synthetic-ph-container"
          >
            <i
              class="am-search-synthetic-ph-icon"
            />
            <span
              class="am-search-synthetic-ph-placeholder"
              style="visibility:visible"
            >
              Search
            </span>
          </span>
        </div>
        <input
          class="am-search-value"
          placeholder="Search"
          type="search"
          value=""
        />
        <a
          class="am-search-clear"
        />
      </div>
      <div
        class="am-search-cancel"
      >
        取消
      </div>
    </form>
  </div>
  <div
    class="am-indexed-list-container"
  >
    <div
      class="am-indexed-list am-list sticky-list am-list-view-scrollview"
    >
      <div
        class="am-list-header"
      >
        <span>
          custom header
        </span>
      </div>
      <div
        class="am-list-body"
      />
      <div
        class="am-list-footer"
      >
        <span>
          custom footer
        </span>
      </div>
    </div>
    <ul
      class="am-indexed-list-quick-search-bar"
      style="top:85px"
    >
      <li
        data-qf-target="#"
      >
        #
      </li>
    </ul>
  </div>
</div>
`;
